syntax = "proto3";

package basketspb;

message Basket {
  string id = 1;
  repeated Item items = 2;
}

message Item {
  string store_id = 1;
  string product_id = 2;
  string store_name = 3;
  string product_name = 4;
  double product_price = 5;
  int32 quantity = 6;
}
